feat:(add method updateProductEmp, add method sort salary productEmp & manageEmp, add method show info productEmp)